--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+:root {
+  --timberwolf: #DAD7CD; /* Light grayish yellow */
+  --sage: #A3B18A; /* Muted green */
+  --fern-green: #588157; /* Deep green */
+  --hunter-green: #3A5A40; /* Dark green */
+  --brunswick-green: #344E41; /* Very dark green */
+}
 html,
 body {
   --bs-light-rgb: 236, 236, 236;
@@ -12,16 +19,15 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: var(--timberwolf);
 }
-:root {
-  --timberwolf: #DAD7CD; /* Light grayish yellow */
-  --sage: #A3B18A; /* Muted green */
-  --fern-green: #588157; /* Deep green */
-  --hunter-green: #3A5A40; /* Dark green */
-  --brunswick-green: #344E41; /* Very dark green */
-}
-.navbar {
+
+.navandfooter {
   background-color: var(--hunter-green);
-  color: white;
+  color: var(--timberwolf);
   padding: 1rem;
+}
+
+.navandfooter .navbar-brand {
+  color: var(--timberwolf) !important;
 }
