--- a/src/styles/forgot-password.module.css
+++ b/src/styles/forgot-password.module.css
@@ -107,3 +107,21 @@
   font-size: 0.85rem;
   margin-top: 10px;
 }
+
+/* Spinner */
+.spinner {
+  width: 18px;
+  height: 18px;
+  border: 3px solid rgba(255, 255, 255, 0.4);
+  border-top: 3px solid white;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
