--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -1,15 +1,14 @@
 .btn-edit {
     width: 100%;
-    padding: 12px;
+    padding: 4px;
     background-color: var(--hunter-green);
     color: white;
     font-size: 1rem;
-    font-weight: bold;
+    font-weight: 400;
     border: none;
     border-radius: 8px;
     transition: background-color 0.3s ease, transform 0.2s ease;
     cursor: pointer;
-    text-transform: uppercase;
 }
 
 .btn-edit:hover {
