--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -79,3 +79,21 @@
     background-color: var(--sage);
     transform: translateY(-2px);
 }
+
+.btn-delete {
+    width: 100%;
+    padding: 4px;
+    background-color: red;
+    color: white;
+    font-size: 1rem;
+    font-weight: 400;
+    border: none;
+    border-radius: 8px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    cursor: pointer;
+}
+
+.btn-delete:hover {
+    background-color: darkred;
+    transform: translateY(-2px);
+}
