--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,10 @@ footer a {
     background-color: var(--brunswick-green);
   }
 }
+
+label:has(+ input:required)::after,
+label:has(+ select:required)::after,
+label:has(+ textarea:required)::after {
+    content: "*";
+    color: red;
+}
