--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,9 +86,7 @@ footer a {
   }
 }
 
-label:has(+ input:required)::after,
-label:has(+ select:required)::after,
-label:has(+ textarea:required)::after {
+.required-field::after {
     content: "*";
     color: red;
 }
