--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -97,3 +97,36 @@
     background-color: darkred;
     transform: translateY(-2px);
 }
+
+.btn-clear {
+    background-color: #d4af37;
+    border-color: #d4af37;
+    color: white;
+    font-size: 1rem;
+    font-weight: 400;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    cursor: pointer;
+}
+
+.btn-clear:hover {
+    background-color: #ab8d2b;
+    border-color: #ab8d2b;
+    transform: translateY(-2px);
+}
+
+.btn-view-active {
+    border-color: black !important;
+    background-color: var(--brunswick-green) !important;
+    color: white !important;
+}
+
+.btn-view-inactive {
+    border-color: black !important;
+    background-color: transparent !important;
+    color: var(--brunswick-green) !important;
+}
+
+.btn-view-inactive:hover {
+    background-color: var(--sage) !important;
+    color: white !important;
+}
